included exit button in chat room, kills socket connection and sends user to homepage. added trust proxy to server in attempt to fix clipboard.write() issues on mobile

--- a/src/components/ChatRoom/ChatRoom.scss
+++ b/src/components/ChatRoom/ChatRoom.scss
@@ -91,6 +91,21 @@
     }
   }
 }
+.leave-room {
+  background-color: rgb(141, 39, 39);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: .5rem;
+  margin: 1rem;
+  &:hover {
+    background-color: rgb(145, 45, 45);
+  }
+}
 
 .message-bubble-send {
   background-color: hsla(170, 50%, 40%, 0.5);
